// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProjectAdminPage /> renders correctly when editing project 1`] = `
<ReactRelayQueryRenderer
  environment={"RelayModernEnvironment()"}
  query={[Function]}
  render={[Function]}
  variables={
    Object {
      "count": 30,
      "cursor": null,
      "isEditMode": true,
      "projectId": "oui",
    }
  }
/>
`;

exports[`<ProjectAdminPage /> renders correctly when no project 1`] = `
<ReactRelayQueryRenderer
  environment={"RelayModernEnvironment()"}
  query={[Function]}
  render={[Function]}
  variables={
    Object {
      "count": 30,
      "cursor": null,
      "isEditMode": false,
      "projectId": "",
    }
  }
/>
`;
